--- a/formelsammlung/sections/fehler-fortpflanzung.tex
+++ b/formelsammlung/sections/fehler-fortpflanzung.tex
@@ -22,8 +22,8 @@ in der Funktion $R$ einsetzt.
 Der mittlere, absolute Fehler $S_{\bar{R}}$ ergibt sich aus dem \emph{Gauss'schen Fehlerfortpflanzungsgesetz}:
 \begin{equation}
     S_{\bar{R}} = \sqrt{  \left( \left.\frac{\partial R}{\partial x} \right\rvert_{\bar{R}} \cdot s_{\bar{x}} \right)^2
-                        + \left( \left.\frac{\partial R}{\partial x} \right\rvert_{\bar{R}} \cdot s_{\bar{x}} \right)^2
-                        + \left( \left.\frac{\partial R}{\partial x} \right\rvert_{\bar{R}} \cdot s_{\bar{x}} \right)^2
+                        + \left( \left.\frac{\partial R}{\partial y} \right\rvert_{\bar{R}} \cdot s_{\bar{y}} \right)^2
+                        + \left( \left.\frac{\partial R}{\partial z} \right\rvert_{\bar{R}} \cdot s_{\bar{z}} \right)^2
                         + \ldots }
 \end{equation}
 
