--- a/laborjournal.tex
+++ b/laborjournal.tex
@@ -10,5 +10,6 @@
     \includepdf[pages=-]{titlepage/deckblatt.pdf}
     \includepdf[pages=-]{formelsammlung/formelsammlung.pdf}
     \includepdf[pages=-]{versuche/computerversuch/computerversuch.pdf}
+    \includepdf[pages=-]{versuche/lichtgeschwindigkeit/lichtgeschwindigkeit.pdf}
 \end{document}
 
