--- a/versuche/lichtgeschwindigkeit/preamble/packages.tex
+++ b/versuche/lichtgeschwindigkeit/preamble/packages.tex
@@ -12,4 +12,10 @@
 \usepackage{pdfpages}
 \sisetup{output-exponent-marker=\ensuremath{\mathrm{E}}}
 \usepackage{dirtytalk}
+\usepackage{pgfplots}
+\usepackage{tikz}
+\usetikzlibrary{arrows}
+\usetikzlibrary{patterns}
+\usetikzlibrary{plotmarks}
+\pgfplotsset{compat=1.11}
 
