--- a/versuche/lichtgeschwindigkeit/sections/auswertung.tex
+++ b/versuche/lichtgeschwindigkeit/sections/auswertung.tex
@@ -68,7 +68,7 @@ In  der Abbildung \ref{fig:am-f-x-fit-b} sind die  Messpunkte  von  der  Tabelle
 Formel \ref{eq:lichtgeschwindigkeit} gefittet und damit ergibt  sich  der Faktor
 $b_{Alex}$ als:
 \begin{equation}
-    b_{Alex} = -(833.0024 \pm 5.339964)\cdot 10^{-9}
+    b_{Alex} = \overline{b_{Alex}} \pm s_{\overline{b_{Alex}}} = -(833.0024 \pm 5.3400)\cdot 10^{-9}
     \label{eq:am-b}
 \end{equation}
 
@@ -84,7 +84,7 @@ In der Abbildung \ref{fig:ym-f-x-fit-b} sind  die  Messpunkte  von  der  Tabelle
 Formel \ref{eq:lichtgeschwindigkeit} gefittet und damit ergibt sich  der  Faktor
 $b_{Yohannes}$ als:
 \begin{equation}
-    b_{Yohannes} = -(839.0909 \pm 8.999140)\cdot 10^{-9}
+    b_{Yohannes} = \overline{b_{Yohannes}} \pm s_{\overline{b_{Yohannes}}} = -(839.0909 \pm 8.9991)\cdot 10^{-9}
     \label{eq:ym-b}
 \end{equation}
 
@@ -155,7 +155,7 @@ In der Abbildung \ref{fig:am-x-z-fit-a}  sind  die  Messpunkte  von  der Tabelle
 Formel  \ref{eq:kalibration-a}   gefittet  und  somit  ergibt  sich  der  Faktor
 $a_{Alex}$ als:
 \begin{equation}
-    a_{Alex} = -(1999.827 \pm 2.460522)\cdot 10^{-3}
+    a_{Alex} = \overline{a_{Alex}} \pm s_{\overline{a_{Alex}}} = -(1999.827 \pm 2.461)\cdot 10^{-3}
     \label{eq:am-a}
 \end{equation}
 
@@ -171,6 +171,6 @@ In  der  Abbildung \ref{fig:ym-x-z-fit-a} sind die Messpunkte  von  der  Tabelle
 Formel  \ref{eq:kalibration-a}   gefittet  und  somit  ergibt  sich  der  Faktor
 $a_{Yohannes}$ als:
 \begin{equation}
-    a_{Yohannes} = -(2002.809 \pm 3.49780)\cdot 10^{-3}
+    a_{Yohannes} = \overline{a_{Yohannes}} \pm s_{\overline{a_{Yohannes}}} = -(2002.809 \pm 3.498)\cdot 10^{-3}
     \label{eq:ym-a}
 \end{equation}
