--- a/versuche/lichtgeschwindigkeit/sections/durchfuehrung.tex
+++ b/versuche/lichtgeschwindigkeit/sections/durchfuehrung.tex
@@ -111,8 +111,10 @@ Messvorgang   auch   ohne   Massensterben   von  Netzhautzellen  erfolgen  kann.
 
 \subsection{Versuchsanordnung Kalibrationsmessung}
 
-
-
+F\"ur die Kalibrationsmessung wurde wie in  der  Abbildung \ref{fig:kalibration}
+vorgegangen.  Ein  Spiegel,  montiert auf einem hochpr\"azisen Arm, wurde in den
+Laserstrahl  gestellt.  Der   Arm   wurde   zwischen   $12.5\mu m$   und
+$17.5\mu m$  verstellt.   Die   Distanz  wurde  wieder  dabei  gemessen.
 
 \subsection{Messmethoden}
 
