--- a/versuche/mtm-tensor/sections/auswertung.tex
+++ b/versuche/mtm-tensor/sections/auswertung.tex
@@ -1,2 +1,78 @@
 \section{Auswertung}
 
+\begin{table}[H]
+    \begin{tabular}{cc}
+        \toprule
+        $\Theta$ (\SI{}{\degree}) & $F$ (\SI{}{\newton}) \\
+        \midrule
+        90 & 2.00  \\
+        80 & 4.18  \\
+        70 & 8.64  \\
+        60 & 11.64 \\
+        50 & 13.08 \\
+        45 & 13.34 \\
+        40 & 12.90 \\
+        30 & 11.24 \\
+        20 & 8.26  \\
+        10 & 4.12  \\
+        0  & 1.88  \\
+        \bottomrule
+    \end{tabular}
+    \caption{}
+\end{table}
+
+\begin{table}[H]
+    \begin{tabular}{cc}
+        \toprule
+        $\Theta$ (\SI{}{\degree}) & $F$ (\SI{}{\newton}) \\
+        \midrule
+         90 & 1.86 \\
+         70 & 2.86 \\
+         50 & 3.43 \\
+         30 & 3.29 \\
+         10 & 2.31 \\
+        -10 & 1.89 \\
+        -30 & 2.17 \\
+        \bottomrule
+    \end{tabular}
+    \caption{}
+\end{table}
+
+\begin{table}[H]
+    \begin{tabular}{cc}
+        \toprule
+        $\Theta$ (\SI{}{\degree}) & $F$ (\SI{}{\newton}) \\
+        \midrule
+         30 & 2.34 \\
+         20 & 2.08 \\
+         10 & 1.84 \\
+         0  & 2.05 \\
+        -10 & 2.61 \\
+        -20 & 3.11 \\
+        -30 & 3.44 \\
+        \bottomrule
+    \end{tabular}
+    \caption{}
+\end{table}
+
+\begin{table}[H]
+    \begin{tabular}{cc}
+        \toprule
+        \multicolumn{2}{l}{$\omega_0 = 5250$} \\
+        $\Theta$ (\SI{}{\degree}) & $F$ (\SI{}{\newton}) \\
+        \midrule
+        90 &  2.00 \\
+        80 &  4.18 \\
+        70 &  8.64 \\
+        60 & 11.64 \\
+        50 & 13.08 \\
+        40 & 13.34 \\
+        30 & 12.90 \\
+        20 &  8.26 \\
+        10 &  4.12 \\
+         0 &  1.88 \\
+        \bottomrule
+    \end{tabular}
+    \caption{}
+\end{table}
+
