Some shit progress

--- a/versuche/mtm-tensor/sections/durchfuehrung.tex
+++ b/versuche/mtm-tensor/sections/durchfuehrung.tex
@@ -1,2 +1,17 @@
 \section{Durchf\"uhrung}
 
+\subsection{Aperatur}
+
+Die   Versuchsanordnung   zur  Bestimmung  des  MTM-Tensors  ist  in  der  Figur
+\ref{fig:versuch} dargestellt.
+
+\begin{figure}[H]
+    \center
+    \includegraphics{images/versuch.pdf}
+    \caption{Versuchsaufbau  (Quelle:  Unterlagen  M6).  1)   Aluminium-Rahmen,   2)
+    Rotations-Rahmen, 3)  Testobjekt,  4)  xy-Kraftsensor,  5)  ``Faden-Spule'',  6)
+    Umlenkrolle, 7) Gewicht, 8) Gleichstrommotor}
+    \label{fig:versuch}
+\end{figure}
+
+
