Updating values and improving a few things

--- a/versuche/computerversuch/bibliography/bibliography.bib
+++ b/versuche/computerversuch/bibliography/bibliography.bib
@@ -3,6 +3,6 @@
     booktitle       = {Taschenbuch der Physik},
     year            = {2015},
     pages           = {642},
-    note            = {schallgeschwindigkeit, luft, trocken, 20 deg C, 344 ms^-1}
+    note            = {schallgeschwindigkeit, luft, trocken, \SI{20}{\celsius}, 344 ms$^{-1}$}
 }
 
