--- a/versuche/computerversuch/preamble/packages.tex
+++ b/versuche/computerversuch/preamble/packages.tex
@@ -9,4 +9,5 @@
 \usepackage[toc,page]{appendix}
 \usepackage{siunitx}
 \usepackage{pdfpages}
+\usepackage{pgf}
 \sisetup{output-exponent-marker=\ensuremath{\mathrm{E}}}
