--- a/versuche/computerversuch/sections/appendix.tex
+++ b/versuche/computerversuch/sections/appendix.tex
@@ -1,8 +1,9 @@
 \begin{appendices}
     \section{Excel-Tabellen}
-    \includepdf[pages=-]{excel/schallgeschwindigkeit}
-    \includepdf[pages=-]{excel/eisengehalt}
-    \includepdf[pages=-]{excel/federkonstante}
+    \includepdf[pages=-]{excel/schallgeschwindigkeit.pdf}
+    %\includepdf[pages=-]{excel/eisengehalt.pdf}
+    \includepdf[pages=-]{excel/federkonstante.pdf}
 
     \section{Handgeschriebenes}
 \end{appendices}
+
