--- a/versuche/computerversuch/sections/federkonstante.tex
+++ b/versuche/computerversuch/sections/federkonstante.tex
@@ -28,16 +28,16 @@ Die Kraft und die Distanz einer Stahlfeder wurde bei verschiedenen Auslenkungen 
             \toprule
             $F (N)$ & \hspace{12mm} & $z (m)$ \\
             \midrule
-            3.83  & & 0.20 \\
-            7.89  & & 0.35 \\
-            8.08  & & 0.42 \\
-            9.80  & & 0.46 \\
-            10.58 & & 0.51 \\
-            12.33 & & 0.54 \\
-            12.23 & & 0.59 \\
-            14.43 & & 0.67 \\
-            15.51 & & 0.81 \\
-            17.09 & & 0.80 \\
+            4.14  & & 0.20 \\
+            6.36  & & 0.35 \\
+            7.92  & & 0.42 \\
+            9.86  & & 0.46 \\
+            11.11 & & 0.51 \\
+            11.70 & & 0.54 \\
+            12.76 & & 0.59 \\
+            14.21 & & 0.67 \\
+            15.29 & & 0.71 \\
+            16.98 & & 0.80 \\
             \bottomrule
         \end{tabular}
         \begin{tablenotes}
@@ -56,7 +56,7 @@ Die Federkonstante $k$ und die Vorspannkraft $F_0$ soll durch lineare Regression
 Es werden zwei unbekannte Gr\"ossen $k$ und $F_0$ in der linearen Funktion $\bar{F}=\bar{z}k+F_0$
 f\"ur die Messpaare $(F_i, z_i)$ gesucht. $k$ l\"asst sich mit der Formel
 \begin{equation}
-    k = \frac{ \sum_{i=1}^{N} (z_i - \bar{z}) (F_i - \bar{F})}{ \sum_{i=1}^{N} (z_i - \bar{z})^2} = \underline{\underline{22.28 \frac{\textrm{N}}{\textrm{m}}}}
+    k = \frac{ \sum_{i=1}^{N} (z_i - \bar{z}) (F_i - \bar{F})}{ \sum_{i=1}^{N} (z_i - \bar{z})^2} = \SI{22.53}{\newton\per\meter}
     \label{eq:k}
 \end{equation}
 
@@ -73,7 +73,7 @@ berechnet werden.
 Durch Umformen der linearen Funktion in der Formel \ref{eq:feder} kann nun auch $F_0$ berechnet
 werden.
 \begin{equation}
-    F_0 = \bar{F} - k\bar{z} = \underline{\underline{-0.54 \textrm{N}}}
+    F_0 = \bar{F} - k\bar{z} = \SI{-0.79}{\newton}
 \end{equation}
 
 
