--- a/versuche/computerversuch/sections/pendel.tex
+++ b/versuche/computerversuch/sections/pendel.tex
@@ -35,21 +35,21 @@ Positionsdaten sind in der Tabelle \ref{tab:pendel} aufgezeichnet.
             \toprule
             $t(s)$  &  $y(m)$   &  $t(s)$   &  $y(m)$   &  $t(s)$  &  $y(m)$    &  $t(s)$   & $y(m)$    &  $t(s)$   &  $y(m)$   &  $t(m)$   &  $y(m)$ \\
             \midrule
-            0.5     & -0.418    & 8.0       & 0.594     & 15.5     & -0.577     & 23.0      & 0.417     & 30.5      & -0.132    & 38.0      & 0.152   \\
-            1.0     & -0.07     & 8.5       & 0.632     & 16.0     & -0.48      & 23.5      & 0.423     & 31.0      & -0.123    & 38.5      & 0.058   \\
-            1.5     & 0.082     & 9.0       & 0.435     & 16.5     & -0.414     & 24.0      & 0.45      & 31.5      & -0.075    & 39.0      & 0.193   \\
-            2.0     & 0.19      & 9.5       & 0.366     & 17.0     & -0.46      & 24.5      & 0.389     & 32.0      & -0.373    & 39.5      & 0.070   \\
-            2.5     & 0.494     & 10        & 0.123     & 17.5     & -0.187     & 25.0      & 0.488     & 32.5      & -0.146    & 40.0      & 0.235   \\
-            3.0     & 0.566     & 10.5      & 0.064     & 18.0     & -0.171     & 25.5      & 0.317     & 33.0      & -0.176    & 40.5      & 0.084   \\
-            3.5     & 0.753     & 11.0      & -0.084    & 18.5     & -0.03      & 26.0      & 0.344     & 33.5      & -0.193    & 41.0      & 0.248   \\
-            4.0     & 0.913     & 11.5      & -0.152    & 19.0     & -0.072     & 26.5      & 0.363     & 34.0      & -0.138    & 41.5      & 0.319   \\
-            4.5     & 0.869     & 12.0      & -0.299    & 19.5     & -0.011     & 27.0      & 0.218     & 34.5      & -0.259    & 42.0      & 0.052   \\
-            5.0     & 0.977     & 12.5      & -0.506    & 20.0     & 0.082      & 27.5      & 0.084     & 35.0      & -0.078    & 42.5      & 0.159   \\
-            5.5     & 0.956     & 13.0      & -0.479    & 20.5     & 0.109      & 28.0      & 0.113     & 35.5      & 0.018     & 43.0      & 0.134   \\
-            6.0     & 0.996     & 13.5      & -0.576    & 21.0     & 0.25       & 28.5      & 0.166     & 36.0      & -0.059    & 43.5      & 0.079   \\
-            6.5     & 0.971     & 14.0      & -0.662    & 21.5     & 0.404      & 29.0      & 0.02      & 36.5      & 0.056     & 44.0      & 0.097   \\
-            7.0     & 0.827     & 14.5      & -0.498    & 22.0     & 0.272      & 29.5      & -0.032    & 37.0      & 0.004     & 44.5      & 0.162   \\
-            7.5     & 0.784     & 15.0      & -0.654    & 22.5     & 0.317      & 30.0      & 0.011     & 37.5      & 0.042     & 45.0      & 0.030   \\
+            0.5     & -0.352    & 8.0       & 0.630     & 15.5     & -0.572     & 23.0      & 0.409    & 30.5       & -0.018    & 38.0      & 0.072   \\
+            1.0     & -0.204    & 8.5       & 0.538     & 16.0     & -0.439     & 23.5      & 0.411    & 31.0       & -0.041    & 38.5      & 0.006   \\
+            1.5     & 0.124     & 9.0       & 0.434     & 16.5     & -0.362     & 24.0      & 0.472    & 31.5       & -0.147    & 39.0      & 0.136   \\
+            2.0     & 0.255     & 9.5       & 0.323     & 17.0     & -0.394     & 24.5      & 0.381    & 32.0       & -0.095    & 39.5      & 0.180   \\
+            2.5     & 0.302     & 10        & 0.185     & 17.5     & -0.211     & 25.0      & 0.448    & 32.5       & -0.144    & 40.0      & 0.110   \\
+            3.0     & 0.516     & 10.5      & 0.068     & 18.0     & -0.292     & 25.5      & 0.379    & 33.0       & -0.232    & 40.5      & 0.087   \\
+            3.5     & 0.754     & 11.0      & -0.073    & 18.5     & -0.122     & 26.0      & 0.340    & 33.5       & -0.162    & 41.0      & 0.225   \\
+            4.0     & 0.819     & 11.5      & -0.204    & 19.0     & -0.008     & 26.5      & 0.203    & 34.0       & -0.112    & 41.5      & 0.113   \\
+            4.5     & 0.866     & 12.0      & -0.248    & 19.5     & 0.084      & 27.0      & 0.184    & 34.5       & -0.171    & 42.0      & 0.184   \\
+            5.0     & 0.916     & 12.5      & -0.353    & 20.0     & 0.126      & 27.5      & 0.111    & 35.0       & -0.086    & 42.5      & 0.167   \\
+            5.5     & 1.014     & 13.0      & -0.392    & 20.5     & 0.192      & 28.0      & 0.089    & 35.5       & -0.130    & 43.0      & 0.198   \\
+            6.0     & 0.942     & 13.5      & -0.576    & 21.0     & 0.200      & 28.5      & 0.094    & 36.0       & -0.075    & 43.5      & 0.212   \\
+            6.5     & 0.931     & 14.0      & -0.543    & 21.5     & 0.216      & 29.0      & 0.106    & 36.5       & -0.098    & 44.0      & 0.142   \\
+            7.0     & 0.858     & 14.5      & -0.468    & 22.0     & 0.400      & 29.5      & -0.003   & 37.0       & 0.056     & 44.5      & 0.128   \\
+            7.5     & 0.678     & 15.0      & -0.496    & 22.5     & 0.329      & 30.0      & -0.013   & 37.5       & 0.056     & 45.0      & 0.138   \\
             \bottomrule
         \end{tabular}
         \begin{tablenotes}
@@ -74,7 +74,7 @@ ermittelt werden.
 \end{figure}
 
 Die Formel \ref{eq:gedaempfte-schwingung} wird in QtiPlot als Fit-Funktion eingegeben. Die gesuchten
-Parameter k\"onnen mittels nicht-linearer Regression ermittelt werden. Angrunt der nicht-linearen Art
+Parameter k\"onnen mittels nicht-linearer Regression ermittelt werden. Aufgrund der nicht-linearen Art
 der Formel m\"ussen vor dem Fitten gute Startwerte von Hand eingestellt werden. Dazu wird der Checkbox
 ``Preview'' eingeschalten und mit den Parametern gespielt, bis die Kurve ungef\"ar passt.
 
@@ -84,11 +84,11 @@ der Formel m\"ussen vor dem Fitten gute Startwerte von Hand eingestellt werden. 
 Von der Figur \ref{fig:pendel} k\"onnen die gesuchten Parameter abgelesen werden. Diese sind:
 \begin{center}
     \begin{tabular}{ll}
-        Amplitude $A$:              &  $(1.29 \pm 0.04)$         \\
-        Abklingkonstante $\Gamma$:  &  $(51.7 \pm 2.2)\num{e-3}$ \\
-        Phase $\delta$:             &  $(503  \pm 23) \num{e-3}$ \\
-        Frequenz $f$:               &  $(55.3 \pm 0.3)\num{e-3}$ \\
-        Offset $y_0$:               &  $(41.4 \pm 7.4)\num{e-3}$ \\
+        Amplitude $A$:              &  $(1.22 \pm 0.03)$         \\
+        Abklingkonstante $\Gamma$:  &  $(52.0 \pm 1.69)\num{e-3}$ \\
+        Phase $\delta$:             &  $(510  \pm 17.6)\num{e-3}$ \\
+        Frequenz $f$:               &  $(55.0 \pm 23.3)\num{e-3}$ \\
+        Offset $y_0$:               &  $(49.0 \pm 5.32)\num{e-3}$ \\
     \end{tabular}
 \end{center}
 
