Hudzovic curves can be generated, wrote function for calculating Tu and Tg

--- a/mlab_bericht_alex_murray.tex
+++ b/mlab_bericht_alex_murray.tex
@@ -3,16 +3,17 @@
 \input{preamble/packages}
 \input{preamble/title}
 
-\addbibresource{bibliography/bibliography.bib}
+%\addbibresource{bibliography/bibliography.bib}
 
 \begin{document}
     \input{titlepage/titlepage}
     \tableofcontents
-    \include{sections/arbeitsgrundlagen}
-    \include{sections/durchfuehrung}
-    \include{sections/auswertung}
-    \include{sections/diskussion}
-    \addcontentsline{toc}{section}{Literature}
-    \printbibliography
+    \include{sections/introduction}
+    \include{sections/theory}
+    \include{sections/simulations}
+    \include{sections/results}
+    \include{sections/discussion}
+    %\addcontentsline{toc}{section}{Literature}
+    %\printbibliography
 \end{document}
 
