--- a/preamble/title.tex
+++ b/preamble/title.tex
@@ -5,5 +5,5 @@
 
 \title{
     \vspace{20mm}
-    \Huge{\textsc{Systemidentifikation mit Hilfe der Schrittantwort}}
+    \Huge{\textsc{Automated System Identification via Step Response}}
 }
