writing bericht, writing more matlab code

--- a/preamble/packages.tex
+++ b/preamble/packages.tex
@@ -10,6 +10,7 @@
 \usepackage{siunitx}
 \usepackage{subcaption}
 \usepackage{pdfpages}
+\usepackage{mathrsfs}
 \sisetup{output-exponent-marker=\ensuremath{\mathrm{E}}}
 \usepackage{dirtytalk}
 \usepackage{pgfplots}
