--- a/sections/simulations/image_import.tex
+++ b/sections/simulations/image_import.tex
@@ -31,7 +31,11 @@ grey-scale. The data on the other hand will have a specific colour, which allows
 us to first detect  what  the  colour is and then filter the image by hue to get
 all data points that have a similar colour.
 
+If the plot happens to be black and white with no colour, then it is possible to
+filter  the  data  using  the   ``value''   component   from   the   HSV   data.
+
 The resulting data is usually noisy, but statistically evenly distributed, which
 makes  decimation  very easy: Just select every nth data point.  The  data  from
 \ref{fig:image:scatter_raw} was decimated by a factor of 50, resulting in figure
 \ref{fig:image:scatter_dec}.
+
