--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,2 +1,10 @@
 \section{Introduction}
 
+There  are  many  ways  to  measure  and  identify a system and there  are  many
+different  systems  to  be measured. In this report we will confine ourselves to
+linear, time-invariant (LTI) systems only. Additionally,  we  will  also confine
+ourselves to systems with no overshoot or undershoot.
+
+The two most common methods are elaborated in  detail. Furthermore, an extension
+to both methods involving a least squares fit will be proposed.
+
