--- a/sections/results.tex
+++ b/sections/results.tex
@@ -1,2 +1,18 @@
 \section{Results}
 
+\begin{figure}
+    \includegraphics[width=\linewidth]{images/error_noise}
+    \caption{The mean square error (MSE) of each method to the original step response function in function of normalised input noise amplitude.}
+\end{figure}
+
+\begin{figure}
+    \includegraphics[width=\linewidth]{images/error_order}
+    \caption{The mean square error (MSE) of each method to a randomly generated step response, in function of filter order}
+\end{figure}
+
+\begin{figure}
+    \includegraphics[width=\linewidth]{images/failure_rate}
+    \caption{How often each method fails to approximate a randomly generated step response, in function of filter order}
+\end{figure}
+
+
