--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -3,4 +3,22 @@
     howpublished = {\url{https://phet.colorado.edu/sims/geometric-optics/geometric-optics_de.html}},
     note = {Abgerufen, 25-10-2015 17:20}
 }
+@inproceedings{ref:sani,
+    author={A. Balestrino and G. Marani and L. Sani}, 
+    booktitle={Electronics, Circuits and Systems, 2001. ICECS 2001. The 8th IEEE International Conference on}, 
+    title={Aperiodic filter analysis and design by symbolic computation}, 
+    year={2001}, 
+    volume={3}, 
+    pages={1289-1292 vol.3}, 
+    keywords={circuit CAD;circuit analysis computing;filters;symbol manipulation;Maple software;aperiodic filter;continuation theory;design analysis;frequency index;identification;industrial process;normalized diagram;reduced model;symbolic computation;time index;Availability;Computational modeling;Filtering theory;Filters;Frequency response;Mechanical engineering;Performance analysis;Software tools;Transfer functions}, 
+    doi={10.1109/ICECS.2001.957451}, 
+    month={},
+}
+@inproceedings{ref:hudzovic,
+    author={P. Hudzovic},
+    title={Algorithm for step response parameterization},
+    booktitle={Proceedings of RIP 1994 Process -- Control Conference with international participation Horni Becva},
+    year={1994},
+    pages={145--148},
+}
 
