--- a/preamble/packages.tex
+++ b/preamble/packages.tex
@@ -5,6 +5,7 @@
 \usepackage[flushleft]{threeparttable}
 \usepackage{float}
 \usepackage{amsmath}
+\usepackage{todonotes}
 \usepackage[backend=bibtex,bibstyle=numeric,sorting=nyt]{biblatex}
 \usepackage[toc,page]{appendix}
 \usepackage{siunitx}
